updated blog and case studies

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,11 +1,10 @@
 ---
 name: Alecs Sandra Saminathan
-avatar: /static/images/annie_sarlina.png
+avatar: /static/images/alecs.png
 occupation: Change Manager
 company: Flutter International
-email: annie.sarlina@gmail.com
-linkedin: https://www.linkedin.com/in/annie-sarlina-79aa8454/
-instagram: https://www.instagram.com/anniesarlina/#
+email: alecs.sandra@outlook.com
+linkedin: https://www.linkedin.com/in/alecssandra/
 ---
 
 Experienced Digital Marketing Manager with a proven track record in performance marketing and e-commerce optimization. Over 9 years of progressive experience across Google Operations Centre and Home Linens Retail Group, scaling ROAS from 300% to 500% and delivering $12.8M in revenue through strategic campaign management.
