update job role and resume

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,8 +1,8 @@
 ---
 name: Alecs Sandra Saminathan
 avatar: /static/images/alecs.png
-occupation: Change Manager
-company: Flutter International
+occupation: Digital Marketing Manager
+company: Home Linens Retail Group
 email: alecs.sandra@outlook.com
 linkedin: https://www.linkedin.com/in/alecssandra/
 ---
