--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,13 +1,13 @@
 ---
 name: Alecs Sandra Saminathan
 avatar: /static/images/alecs.png
-occupation: Digital Marketing Manager
+occupation: Digital Marketing and E-commerce Manager
 company: Home Linens Retail Group
 email: alecs.sandra@outlook.com
 linkedin: https://www.linkedin.com/in/alecssandra/
 ---
 
-Experienced Digital Marketing Manager with a proven track record in performance marketing and e-commerce optimization. Over 9 years of progressive experience across Google Operations Centre and Home Linens Retail Group, scaling ROAS from 300% to 500% and delivering $12.8M in revenue through strategic campaign management.
+Experienced **Digital Marketing Manager** with a proven track record in performance marketing and e-commerce optimization. Over 9 years of progressive experience across Google Operations Centre and Home Linens Retail Group, scaling ROAS from 300% to 500% and delivering $12.8M in revenue through strategic campaign management.
 
 My professional toolkit includes data-driven decision making using Google Analytics and SA360, with certifications in Google Search, Display, and Video. I excel in cross-channel campaign optimization, team leadership, and stakeholder collaboration, having successfully managed 200+ client portfolios and mentored multiple team members.
 
